...
          onPress={handleSignup}
          size="lg"
          title="Sign up for a new Trustroots account"
          disabled={isBusy}
        />
        <Button
          testID="onboarding-trustroots-legacy-key"
          variant="outline"
          textClassName="text-white"
          onPress={goLegacyKeyFlow}
          size="lg"
          title="Set up my key manually"
          disabled={isBusy}
...
